# 20250123_domeyko_for_each_month

./: README.md  pyproject.toml
20250123_domeyko_for_each_month/: dom_constants.py
20250123_domeyko_for_each_month/utils/: data.py  excel.py  utils.py
